--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portifolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    
 </head>
@@ -65,23 +66,23 @@
             <h1 class="sub-title">Services</h1>
             <div class="services-list">
                 <div>
-                    <i class="fa fa-code" style="font-size:48px;color:white"></i>
-                    <h2>Wb Design</h2>
+                    <i class='fa fa-html5' style='font-size:48px;color:red'></i>
+                    <h2>HTML</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod voluptate, quos expedita,
                         laudantium tenetur dolores iste, nulla ad ut dolorem delectus provident. Rerum amet, dolores
                         enim nemo perferendis illo.</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
-                    <i class='fa fa-eye-slash' style='font-size:48px;color:white'></i>
-                    <h2>UI/UX Design</h2>
+                    <i class='fa fa-css3' style='font-size:48px;color:red'></i>
+                    <h2>CSS</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod voluptate, quos expedita,
                         laudantium tenetur dolores iste, nulla ad ut dolorem delectus provident. Rerum amet, dolores
                         enim nemo perferendis illo.</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
-                    <i class="fa fa-buysellads" style="font-size:48px;color:red"></i>
+                    <i class='fa fa-js' style='font-size:48px;color:red'></i>
                     <h2>APP Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod voluptate, quos expedita,
                         laudantium tenetur dolores iste, nulla ad ut dolorem delectus provident. Rerum amet, dolores
@@ -109,7 +110,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="mamage/my work2.jpg">
+                    <img src="mamage/wewe.jpg">
                     <div class="layer">
                         <h3>Music App</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis doloremque explicabo
