--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <a href="#">Learn more</a>
                 </div>
                 <div>
-                    <i class='fa fa-js' style='font-size:48px;color:red'></i>
+                    <i class='fa fa-git-square' style='font-size:48px;color:blue'></i>
                     <h2>APP Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quod voluptate, quos expedita,
                         laudantium tenetur dolores iste, nulla ad ut dolorem delectus provident. Rerum amet, dolores
