--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portofolio">Portofolio</a></li>
                     <li><a href="#container">Contact</a></li>
-                    <li><a href="indexx.html">Spesial</a></li>
+                    <li><a href="indexx.html">S<span>pesial</span></a></li>
                     <i class="material-icons">close</i>
                 </ul>
                 <i class="material-icons">menu</i>
