--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About </h1>
                     <p>
-                        Halo,Nama saya Mochamad Reivaldy Zaen
+                        Halo,Nama saya Mochamad Reivaldy Zaen<br>
+                        ganteng 2/10 lah,follow di bawah <br><br><br><br>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam voluptas veritatis omnis non sequi vel voluptate quo illo nemo, asperiores sed totam temporibus amet adipisci debitis voluptatem, hic aut deleniti.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, maxime! Maxime nam totam consectetur illo magni aliquam nihil neque suscipit ipsam, dignissimos temporibus distinctio architecto, numquam doloremque perspiciatis, id odit.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur iure officia dolorem reiciendis dicta, sit exercitationem pariatur eveniet vitae excepturi eum? Eligendi facilis labore at, assumenda cum ipsum! Sed, quae.
                     </p>
                 </div>
             </div>
@@ -117,7 +120,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis doloremque explicabo
                             porro, iste alias libero sit. Tenetur error, facilis nam necessitatibus doloremque odio
                             doloribus laboriosam nemo quia quasi eius saepe?</p>
-                        <a href="https://open.spotify.com/user/31ua3pz2ls6kji3qgfn5f6s22lky?si=829a0e087792477e"><i
+                        <a href="https://open.spotify.com/user/313mhwnuymufnztn3xx3rsneh254?si=a9b806aaf8d64c33"><i
                                 class="fa fa-external-link" style="font-size:30px"></i></a>
                     </div>
                 </div>
@@ -152,7 +155,7 @@
                                 style="font-size:48px"></i></a>
                         <a href="tel:+62858-1989-5146"><i class="fa fa-whatsapp" style="font-size:48px"></i></a>
                         <a
-                            href="https://open.sphttps://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.cssotify.com/user/31ua3pz2ls6kji3qgfn5f6s22lky?si=a4f81962a593442e"><i
+                            href="https://open.spotify.com/user/313mhwnuymufnztn3xx3rsneh254?si=a9b806aaf8d64c33"><i
                                 class="fa fa-spotify" style="font-size:48px"></i></a>
                     </div>
                     <a href="mamage/sertifikat_course_123_3482413_021123092918.pdf" download class="btn btn2">My
@@ -160,7 +163,7 @@
                 </div>
                 <div class="contact-right">
                     <form>
-                        <input type="text" name="Name" placeholder="Your Name" required>
+  .                      <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="email" placeholder="your email" required>
                         <textarea name="message" rows="6" placeholder="your message"></textarea>
                         <div class="oaa">
