--- a/indexx.html
+++ b/indexx.html
@@ -12,13 +12,13 @@
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
-        <span>E</span>
+        <span>A</span>
         <span>Y</span>
-        <span>Y</span>
+        <span>L</span>
         <span>O</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah buat kamu!!</span>
+        <span>Buat Kamu Spesial</span>
     </div>
     <div class="button">
         <button>
