--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
                     <h1 class="sub-title">About </h1>
                     <p>
                         Halo,Nama saya Mochamad Reivaldy Zaen<br>
-                        ganteng 2/10 lah,follow di bawah <br><br><br><br>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam voluptas veritatis omnis non sequi vel voluptate quo illo nemo, asperiores sed totam temporibus amet adipisci debitis voluptatem, hic aut deleniti.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, maxime! Maxime nam totam consectetur illo magni aliquam nihil neque suscipit ipsam, dignissimos temporibus distinctio architecto, numquam doloremque perspiciatis, id odit.
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur iure officia dolorem reiciendis dicta, sit exercitationem pariatur eveniet vitae excepturi eum? Eligendi facilis labore at, assumenda cum ipsum! Sed, quae.
+                        saya seorang murid dari SMK WIKRAMA BOGOR saya fokus kepada Web Development, saya pekerja keras,disiplin detail dan saya seorang yang dapat bekerja tim dan saya memiliki pengalaman menjadi ketua tim
                     </p>
                 </div>
             </div>
@@ -127,11 +125,11 @@
                 <div class="work">
                     <img src="mamage/WAA.jpg">
                     <div class="layer">
-                        <h3>Whatsapp App</h3>
+                        <h3> Linkedin</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis doloremque explicabo
                             porro, iste alias libero sit. Tenetur error, facilis nam necessitatibus doloremque odio
                             doloribus laboriosam nemo quia quasi eius saepe?</p>
-                        <a href="tel:+62858-1989-5146"><i class="fa fa-external-link" style="font-size:30px"></i></a>
+                        <a href="https://www.linkedin.com/in/mochamad-reivaldy-zaen/"><i class="fa fa-external-link" style="font-size:30px"></i></a>
                     </div>
                 </div>
             </div>
