--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact </h1>
-                    <p><i class='fa fa-location-arrow' style='font-size:36px'></i>Zaen@Gmail.com</p>
+                    <p><i class='fa fa-location-arrow' style='font-size:36px'></i>revaldyzaens@Gmail.com</p>
                     <p><i class='fa fa-phone' style='font-size:36px'></i>085812134563</p>
                     <div class="social-icons">
                         <a href="https://www.instagram.com/reivaldyz_/"><i class="fa fa-instagram"
                                 style="font-size:48px"></i></a>
-                        <a href="tel:+62858-1989-5146"><i class="fa fa-whatsapp" style="font-size:48px"></i></a>
+                        <a href="https://www.linkedin.com/in/mochamad-reivaldy-zaen/"><i class="fa fa-linkedin-square" style="font-size:48px;color:blue"></i></a>
                         <a
                             href="https://open.spotify.com/user/313mhwnuymufnztn3xx3rsneh254?si=a9b806aaf8d64c33"><i
                                 class="fa fa-spotify" style="font-size:48px"></i></a>
